# Statistical-Arbitrage-Volatility-Trading-Strategy

./: README.md  pyproject.toml
data/: sample_schema.json
reports/: performance_report.md  summary.json
scripts/: run_backtest.py
src/stat_arb_vol/: __init__.py  config.py
src/stat_arb_vol/analytics/: metrics.py  report.py
src/stat_arb_vol/backtest/: engine.py  events.py
src/stat_arb_vol/data/: loader.py
src/stat_arb_vol/models/: cointegration.py  ou.py
src/stat_arb_vol/risk/: kelly.py
src/stat_arb_vol/strategy/: pairs_ou_strategy.py
src/stat_arb_vol/web/: app.py
